<resources>
    <string name="app_name">Montenegro Turístico</string>
    <string name="titulo">Montenegro</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="iniciarSes">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="reppassword">Repetir contraseña</string>
    <string name="correo">Correo electrónico</string>
    <string name="cancelar">Cancelar</string>
    <string name="miPerfil">Mi Perfil</string>
    <string name="cerrarSesion">Cerrar Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel1">DECAMERON</string>
    <string name="hotel2">LOS GIRASOLES</string>
    <string name="Hotel1">Hotel1</string>
    <string name="Hotel2">Hotel2</string>
    <string name="title_activity_hotel">HotelActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
